ecmascript/parser/tests/typescript-errors/tsc/async/es6/functionDeclarations/asyncFunctionDeclaration9_es6/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es6/functionDeclarations/asyncFunctionDeclaration9_es6/input.ts:4:14
  |
4 |   var v = { [await]: foo }
  |              ^^^^^

